# QnAGenerator

./: .env  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md
src/qnagenerator/: generate_summary.py  prompt.md
